force-app/main/default/objects/Lead/fields/Nurture_Reason_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Reason_Other_Description__c</fullName>
    <label>Nurture Reason Other Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>