force-app/main/default/objects/Lead/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>Status reason for qualified or unqualified.</description>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid Email</fullName>
            </value>
            <value>
                <fullName>Invalid Phone</fullName>
            </value>
            <value>
                <fullName>Lack of budget</fullName>
            </value>
            <value>
                <fullName>Not a decision maker</fullName>
            </value>
            <value>
                <fullName>small company</fullName>
            </value>
            <value>
                <fullName>Already have a solution</fullName>
            </value>
            <value>
                <fullName>Auto-Nurture</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>