force-app/main/default/objects/Lead/fields/Unqualified_Reason_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason_Other_Description__c</fullName>
    <label>Unqualified Reason Other Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>